--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,42 @@
 @import "base";
 
+/* START 3x2 Blog Container  */
+.grid-container3 {
+    display: grid;
+    grid-template-areas:'header1 header1 header1' 'post1 post2 post3' 'header2 header2 header2' 'post4 post5 post6';
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: auto;
+    grid-gap: 4% 6%;
+    padding: 1em;
+    margin: 2em 3em;
 
+    .headline1 {
+        grid-area: header1;
+        grid-column: 1 / span 3;
+        grid-row: 1;        
+    }
+ 
+    .headline2 {
+        grid-area: header2;
+        grid-column: 1 / span 3;
+        grid-row: 3;       
+    }
 
-
-
-
-img {
-        max-width:100%;
-        margin: 0;       
+    [class^="headline"] {
+        @include setpadding-tb(0.5em,0.5em);
+        background-color: $headline-bgcolor;
+        > h3 {
+            color: $txt-primary;
+            font-weight: normal;
+            @include setfs(3rem);       
+        }
+    }
 }
 
 .blog1 { 
     grid-area: post1;
     grid-row: 2;
-    grid-column: 1;    
+    grid-column: 1;
 }
 .blog2 { 
     grid-area: post2;
@@ -26,33 +49,144 @@ img {
     grid-column: 3;   
 }
 
-[class^="blog"] a {
-    text-decoration: none;
-    width: 50;
-    .desc {
-        background-color: $txt-bgcolor;
+.blog4 { 
+    grid-area: post4;
+    grid-row: 4;
+    grid-column: 1;   
+}
+.blog5 { 
+    grid-area: post5;
+    grid-row: 4;
+    grid-column: 2;      
+}
+.blog6 { 
+    grid-area: post6;
+    grid-row: 4;
+    grid-column: 3;      
+}
+
+[class^="blog"] {
+    width: 100%;
+    @include center-txt();
+    @include setmargin-tb(0.8em,auto);
+    a {
+        text-decoration: none;
         color: white;
-        @include center-txt();
-        @include setpadding-tb(1em,1em);
+        .desc {
+            background-color: $txt-bgcolor;
+            color: white;
+            @include center-txt();
+            @include setpadding-tb(1em,1em);
+            margin-top: 0.3em;
+        }
     }
-}
+    img {
+        max-width:100%;
+        margin: 0 auto;       
+    }   
+}    
+
+/* END 3x2 Blog Container  */
 
 
-[class^="grid-container"] {
+/* START 2x2 Blog Container  */
+.grid-container2 {
     display: grid;
-    grid-template-areas:'header header header' 'post1 post2 post3';
-    grid-template-columns: 33% 33% 33%;
+    grid-template-areas:'devimg devimg' 'post1 post2' 'post3 post4';
+    grid-template-columns: 45% 45%;
     grid-template-rows: auto;
-    grid-gap: 1em;
+    grid-gap: 4% 6%;
     padding: 1em;
-    margin: 1em 2em;
-    h3 {
-        grid-area: header;
+    margin: 2em 3em;
+
+    .devheadline {
+        grid-area: devimg; 
         grid-row: 1;
-        grid-column: 1;    
-        background-color: $headline-bgcolor;
-        @include setpadding-tb(0.5em,0.5em);
-        color: $txt-primary;
-        font-weight: normal;
+        grid-column: 1 / span 2;    
+        @include setpadding-tb(0.5em,0.5em);   
     }
+
+
+
 }
+/* END 2x2 Blog Container  */
+
+@media screen and (max-width: 480px) {
+    .grid-container3 {
+        display: grid;
+        grid-template-areas:'header1' 'post1' 'post2' 'post3' 'header2' 'post4' 'post5' 'post6';
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+        grid-gap: 0;
+        padding: 0;
+        margin: 0;
+
+        .headline1 {
+            grid-area: header1; 
+            grid-row: 1;
+            grid-column: 1;             
+        }
+     
+        .headline2 {
+            grid-area: header2;
+            grid-row: 5;
+            grid-column: 1;               
+        }
+    
+        [class^="headline"] {
+            @include setmargin-tb(0.5em, 0);
+            @include setpadding-tb(0.5em,0.5em);
+            h3 {
+                width: 100%;
+                @include center-txt();
+                @include setfs(2.5rem);       
+            }
+        }
+    }
+    
+    .blog1 { 
+        grid-area: post1;
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .blog2 { 
+        grid-area: post2; 
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .blog3 { 
+        grid-area: post3;
+        grid-row: 4;
+        grid-column: 1; 
+    }
+    
+    .blog4 { 
+        grid-area: post4;
+        grid-row: 6;
+        grid-column: 1; 
+    }
+    .blog5 { 
+        grid-area: post5;
+        grid-row: 7;
+        grid-column: 1;     
+    }
+    .blog6 { 
+        grid-area: post6;
+        grid-row: 8;
+        grid-column: 1;    
+    }
+    
+    [class^="blog"] {
+        width: 90%;
+        @include setfs(2rem);
+        a {
+            .desc {       
+                @include setpadding-tb(1em,1em);
+                margin-top: -0.25em;
+            }
+        }  
+    } 
+
+} /* End mobile friendly */
